--- a/J_DeLosSantos_MyFavoriteBaseballTeam/src/styles.scss
+++ b/J_DeLosSantos_MyFavoriteBaseballTeam/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+img{
+    width: 250px;
+    float: left;
+    margin-right: 20px;
+    border-radius: 50%;
+}
+.card_container{
+    min-height: 200px;
+}
