--- a/J_DeLosSantos_MyFavoriteBaseballTeam/src/styles.scss
+++ b/J_DeLosSantos_MyFavoriteBaseballTeam/src/styles.scss
@@ -7,4 +7,16 @@ img{
 }
 .card_container{
     min-height: 200px;
+    border: 1px solid rgb(236, 235, 235);
+    margin: 10px;
+    padding: 5px 10px;
+    border-radius: 10px;
+}
+.card_container:hover{
+    background-color: gainsboro;
+}
+.error{
+    color: red;
+    margin-top: 50px;
+    font-size: 20px;
 }
