Delete code implementation from Content-card component for the ContentList class

--- a/J_DeLosSantos_MyFavoriteBaseballTeam/src/app/content-card/content-card.component.html
+++ b/J_DeLosSantos_MyFavoriteBaseballTeam/src/app/content-card/content-card.component.html
@@ -1,4 +1,1 @@
-<div [innerHTML] = contentList.getContentByIndex(0)></div>
-<div [innerHTML] = contentList.getContentByIndex(1)></div>
-<div [innerHTML] = contentList.getContentByIndex(2)></div>
-<div [innerHTML] = contentList.getContentByIndex(5)></div>
+<div [innerHTML] = contentList></div>
