--- a/J_DeLosSantos_MyFavoriteBaseballTeam/src/app/content-card/content-card.component.html
+++ b/J_DeLosSantos_MyFavoriteBaseballTeam/src/app/content-card/content-card.component.html
@@ -1,1 +1,31 @@
-<div [innerHTML] = contentList></div>
+<!-- <div [innerHTML] = content.title></div> -->
+
+<style>
+    .card{
+        border: 1px solid rgb(200, 200, 200);
+        padding: 0 10px;
+        box-sizing: border-box;
+        margin-bottom: 20px;
+    }
+    img{
+        width:200px;
+        border-radius: 50%;
+    }
+    .error{
+        color: red;
+        margin-top: 50px;
+        font-size: 20px;
+    }
+    h2{
+        background-color: black;
+        color: white;
+        padding: 5px 20px;
+    }
+</style>
+
+<div class="card">
+    <h2>{{content.title}}</h2>
+    <img src={{content.imgURL}} alt="{{content.title}}" /><br/>
+    <p><b>Description:</b> {{content.description}}</p>
+    <span><b>Creator:</b> {{content.creator}}</span><br/><br/>
+</div>
