--- a/J_DeLosSantos_MyFavoriteBaseballTeam/src/app/content-list/content-list.component.html
+++ b/J_DeLosSantos_MyFavoriteBaseballTeam/src/app/content-list/content-list.component.html
@@ -1,1 +1,1 @@
-<app-content-card *ngFor="let item of contentItems ; index as i; first as isFirst" [content]="item" [class.is-first]="isFirst"></app-content-card>
+<app-content-card *ngFor="let item of contentItems ; index as i; first as isFirst" [content]="item" [isFirst]="isFirst"></app-content-card>
