Added custom pipe and implementation for it

--- a/J_DeLosSantos_MyFavoriteBaseballTeam/src/app/content-list/content-list.component.html
+++ b/J_DeLosSantos_MyFavoriteBaseballTeam/src/app/content-list/content-list.component.html
@@ -1,1 +1,2 @@
-<app-content-card *ngFor="let item of contentItems ; index as i; first as isFirst" [content]="item" [isFirst]="isFirst"></app-content-card>
+<!-- <app-content-card *ngFor="let item of contentItems ; index as i; first as isFirst" [content]="item" [isFirst]="isFirst"></app-content-card> -->
+<app-content-card *ngFor="let item of (contentItems | filterType) ; index as i; first as isFirst" [content]="item" [isFirst]="isFirst"></app-content-card>
