Added styling for different types card

--- a/J_DeLosSantos_MyFavoriteBaseballTeam/src/app/content-card/content-card.component.scss
+++ b/J_DeLosSantos_MyFavoriteBaseballTeam/src/app/content-card/content-card.component.scss
@@ -21,3 +21,13 @@ h2{
 .is-first{
     border: 2px solid black;
 }
+
+.test1{
+    background-color: rgba(224, 255, 255, 0.606);
+}
+.test2{
+    background-color: rgba(255, 255, 224, 0.765);
+}
+.none{
+    background-color: gainsboro;
+}
