--- a/J_DeLosSantos_MyFavoriteBaseballTeam/src/app/content-card/content-card.component.html
+++ b/J_DeLosSantos_MyFavoriteBaseballTeam/src/app/content-card/content-card.component.html
@@ -1,5 +1,5 @@
 <!-- <div [innerHTML] = content.title></div> -->
-<div class="card" [class.is-first]="isFirst" >
+<div class="card" [class.is-first]="isFirst" [class]="type" >
     <h2>{{content.title}}</h2>
     <img (click)="onClick(content.id, content.title)" *ngIf="content.imgURL" src={{content.imgURL}} alt="{{content.title}}" /><br/>
     <p><b>Description:</b> {{content.description}}</p>
