--- a/J_DeLosSantos_MyFavoriteBaseballTeam/src/app/content-list/content-list.component.html
+++ b/J_DeLosSantos_MyFavoriteBaseballTeam/src/app/content-list/content-list.component.html
@@ -1,5 +1,9 @@
 <!-- <app-content-card *ngFor="let item of contentItems ; index as i; first as isFirst" [content]="item" [isFirst]="isFirst"></app-content-card> -->
 
+<input type="search" #search (keyup)="updateValue(search.value)"/>
+<button (click)="handleOnClick()">Check</button>
+<p *ngIf="showResult && checkIfTitleExists()" class="result exists">This Title Exists</p>
+<p *ngIf="showResult && !checkIfTitleExists()" class="result">This Title Does Not Exists</p>
 <h2>Content with Test1 Type</h2>
 <app-content-card *ngFor="let item of (contentItems | filterType:'Test1') ; index as i; first as isFirst" [content]="item" [isFirst]="isFirst" type="test1"></app-content-card>
 <h2>Content with Test2 Type</h2>
