--- a/J_DeLosSantos_MyFavoriteBaseballTeam/src/app/content-list/content-list.component.scss
+++ b/J_DeLosSantos_MyFavoriteBaseballTeam/src/app/content-list/content-list.component.scss
@@ -12,6 +12,7 @@ input{
     height: 40px;
     width: calc(100% - 100px);
     padding: 0 10px;
+    border: 1px solid gainsboro;
 }
 button{
     width: 100px;
