--- a/J_DeLosSantos_MyFavoriteBaseballTeam/src/app/content-card/content-card.component.html
+++ b/J_DeLosSantos_MyFavoriteBaseballTeam/src/app/content-card/content-card.component.html
@@ -2,6 +2,7 @@
 <div class="card" [class.is-first]="isFirst" [class]="type" >
     <h2>{{content.title}}</h2>
     <img (click)="onClick(content.id, content.title)" *ngIf="content.imgURL" src={{content.imgURL}} alt="{{content.title}}" /><br/>
+    <img (click)="onClick(content.id, content.title)" *ngIf="!content.imgURL" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/92/Baseball.svg/2048px-Baseball.svg.png" alt="{{content.title}}" /><br/>
     <p><b>Description:</b> {{content.description}}</p>
     <p><b>Creator:</b> {{content.creator}}</p>
     <p *ngIf="content.type"><b>Type:</b> {{content.type}}</p>
