Added logic to hover affect directive to bold element and implemented it in tags elements

--- a/J_DeLosSantos_MyFavoriteBaseballTeam/src/app/content-card/content-card.component.html
+++ b/J_DeLosSantos_MyFavoriteBaseballTeam/src/app/content-card/content-card.component.html
@@ -9,7 +9,7 @@
     <div *ngIf="content.tags">
         <p><b>Tags:</b></p>
         <ul>
-            <li *ngFor="let tag of content.tags">
+            <li  *ngFor="let tag of content.tags" appHoverAffect affectStyle="bold">
                 {{tag}}
             </li>
         </ul>
