--- a/J_DeLosSantos_MyFavoriteBaseballTeam/src/app/create-content/create-content.component.html
+++ b/J_DeLosSantos_MyFavoriteBaseballTeam/src/app/create-content/create-content.component.html
@@ -1,47 +1,47 @@
-<form>
+<form (submit)="onSubmit($event, {id: id.valueAsNumber, title:title.value, description:description.value, creator:creator.value, imgURL:imgURL.value, type:type.value, tags:[tags.value]})">
     <label for="id">
         ID:
         <br>
         <input type="number" name="id" #id/>
     </label>
     <br>
-    <label for="">
+    <label for="title">
         Title:
         <br>
         <input type="text" name="title" #title/>
     </label>
     <br>
-    <label for="">
+    <label for="description">
         Description:
         <br>
         <input type="text" name="description" #description/>
     </label>
     <br>
-    <label for="">
+    <label for="creator">
         Creator:
         <br>
         <input type="text" name="creator" #creator/>
     </label>
     <br>
-    <label for="">
+    <label for="imgURL">
         imgURL:
         <br>
         <input type="text" name="imgURL" #imgURL/>
     </label>
     <br>
-    <label for="">
+    <label for="type">
         Type:
         <br>
         <input type="text" name="type" #type/>
     </label>
     <br>
-    <label for="">
+    <label for="tags">
         Tags:
         <br>
         <input type="text" name="tags" #tags/>
     </label>
     <br>
-    <input type="submit" value="Create" (click)="onSubmit($event, {id: id.valueAsNumber, title:title.value, description:description.value, creator:creator.value, imgURL:imgURL.value, type:type.value, tags:[tags.value]})"/>
+    <input type="submit" value="Create"/>
     <br>
     <br>
 </form>
