--- a/J_DeLosSantos_MyFavoriteBaseballTeam/src/app/content-list/content-list.component.html
+++ b/J_DeLosSantos_MyFavoriteBaseballTeam/src/app/content-list/content-list.component.html
@@ -1,6 +1,7 @@
 <!-- <app-content-card *ngFor="let item of contentItems ; index as i; first as isFirst" [content]="item" [isFirst]="isFirst"></app-content-card> -->
 <app-create-content (createContent)="addContent($event)"></app-create-content>
 <p *ngIf="showError" class="error">Content Failed to be added</p>
+<p *ngIf="showSuccess" class="success">Content was successfully added</p>
 <div class="search_container">
     <input type="search" placeholder="Check If Title Exists" #search (input)="updateValue(search.value)"/>
     <button (click)="handleOnClick()">Check</button>
