--- a/J_DeLosSantos_MyFavoriteBaseballTeam/src/app/app.component.html
+++ b/J_DeLosSantos_MyFavoriteBaseballTeam/src/app/app.component.html
@@ -31,6 +31,7 @@
 <main class="main">
   <div class="content">
     <div>
+      <app-messages></app-messages>
       <app-content-card [content]="content" [hasShadow]="true"></app-content-card>
       <app-content-list></app-content-list>
     </div>
