Added Bonus part to be able to specify an id and search for content with that id

--- a/J_DeLosSantos_MyFavoriteBaseballTeam/src/app/app.component.html
+++ b/J_DeLosSantos_MyFavoriteBaseballTeam/src/app/app.component.html
@@ -32,6 +32,10 @@
   <div class="content">
     <div>
       <app-messages></app-messages>
+      <form (submit)= "getContent($event, search.value)" >
+        <input type="search" name="search" #search/>
+        <input type="submit" />
+      </form>
       <app-content-card [content]="content" [hasShadow]="true"></app-content-card>
       <app-content-list></app-content-list>
     </div>
